--- a/01_IAW_FcoJavier/prueba.html
+++ b/01_IAW_FcoJavier/prueba.html
@@ -1,1 +1,1 @@
-<a href="google.com"><p>Google</p></a>
+<a href="https://www.google.com/webhp?hl=es&sa=X&ved=0ahUKEwjNksKBkKbzAhUZD2MBHV8MAXIQPAgI&safe=active&ssui=on"><p>Google</p></a>
